--- a/src/app/matchup-overview/matchup/movechart/movechart.component.html
+++ b/src/app/matchup-overview/matchup/movechart/movechart.component.html
@@ -22,3 +22,21 @@
   </div>
   <div class="w-full h-3 rounded-b-full bg-slate-400"></div>
 </div>
+<div class="border-bug" style="display: none"></div>
+<div class="border-dark" style="display: none"></div>
+<div class="border-dragon" style="display: none"></div>
+<div class="border-electric" style="display: none"></div>
+<div class="border-fairy" style="display: none"></div>
+<div class="border-fighting" style="display: none"></div>
+<div class="border-fire" style="display: none"></div>
+<div class="border-flying" style="display: none"></div>
+<div class="border-ghost" style="display: none"></div>
+<div class="border-grass" style="display: none"></div>
+<div class="border-ground" style="display: none"></div>
+<div class="border-ice" style="display: none"></div>
+<div class="border-normal" style="display: none"></div>
+<div class="border-poison" style="display: none"></div>
+<div class="border-psychic" style="display: none"></div>
+<div class="border-rock" style="display: none"></div>
+<div class="border-steel" style="display: none"></div>
+<div class="border-water" style="display: none"></div>
