--- a/src/app/draft-overview/draft-preview/draft-preview.component.html
+++ b/src/app/draft-overview/draft-preview/draft-preview.component.html
@@ -12,19 +12,19 @@
       class="flex flex-col h-full shadow-md bg-cyan-200 shadow-cyan-600 rounded-xl"
     >
       <div class="flex-grow p-2 shadow-md bg-cyan-300 rounded-xl">
-        <div class="flex w-full space-x-2 h-fit">
+        <div class="flex items-center w-full space-x-2 h-fit">
           <div
             class="flex items-center justify-center w-3/5 h-auto p-1 overflow-hidden font-semibold text-center whitespace-normal rounded-full shadow-inner text-medium bg-cyan-200 shadow-cyan-600 overflow-ellipsis"
           >
             {{ team.leagueName }}
           </div>
           <div
-            class="flex items-center justify-center w-1/5 h-auto p-1 overflow-hidden text-xs font-semibold whitespace-normal rounded-full shadow-inner bg-cyan-200 shadow-cyan-600 overflow-ellipsis"
+            class="flex items-center justify-center w-1/5 p-1 overflow-hidden text-xs font-semibold text-center whitespace-normal rounded-full shadow-inner h-fit bg-cyan-200 shadow-cyan-600 overflow-ellipsis"
           >
             {{ team.ruleset }}
           </div>
           <div
-            class="flex items-center justify-center w-1/5 h-auto p-1 overflow-hidden text-xs font-semibold text-center whitespace-normal rounded-full shadow-inner bg-cyan-200 shadow-cyan-600 overflow-ellipsis"
+            class="flex items-center justify-center w-1/5 p-1 overflow-hidden text-xs font-semibold text-center whitespace-normal rounded-full shadow-inner h-fit bg-cyan-200 shadow-cyan-600 overflow-ellipsis"
           >
             {{ team.format }}
           </div>
