--- a/src/app/matchup-overview/matchup-overview.component.html
+++ b/src/app/matchup-overview/matchup-overview.component.html
@@ -43,9 +43,9 @@
     class="fixed inset-0 z-30 flex flex-col items-center justify-center bg-gray-800 bg-opacity-50"
   >
     <div
-      class="w-5/6 p-8 bg-white rounded-lg shadow-lg sm:w-2/3 md:w-1/2 xl:w-1/3"
+      class="w-5/6 p-8 bg-white rounded-lg shadow-lg md:w-2/3 lg:w-1/2 xl:w-1/3"
     >
-      <h1 class="text-3xl font-bold">Share your matchup</h1>
+      <h1 class="text-3xl font-bold text-center">Share your matchup</h1>
       <div class="flex items-center max-w-full mt-4">
         <div class="overflow-x-auto">
           {{ shareUrl }}
@@ -66,7 +66,7 @@
       </button>
       <div
         *ngIf="matchupData"
-        class="hidden p-2 mt-4 border border-slate-200 rounded-xl sm:block"
+        class="p-2 mt-4 border border-slate-200 rounded-xl"
       >
         <div class="flex w-full mb-2">
           <div class="w-1/4 text-center">
@@ -97,7 +97,7 @@
         <div class="flex divide-x-2">
           <div class="flex flex-row-reverse flex-wrap w-1/2 pr-2 h-fit">
             <div
-              class="relative w-1/4"
+              class="relative w-1/3 sm:w-1/4"
               *ngFor="let pokemon of matchupData.overview[0].team"
             >
               <sprite [pokemon]="pokemon" [flipped]="true"></sprite>
@@ -108,7 +108,7 @@
               />
               <div class="absolute flex justify-center w-full -bottom-1">
                 <div
-                  class="w-1/2 text-xs text-center border rounded-full bg-slate-100 border-slate-200"
+                  class="w-1/2 text-center border rounded-full text-2xs sm:text-xs bg-slate-100 border-slate-200"
                 >
                   {{ pokemon.baseStats.spe }}
                 </div>
@@ -117,7 +117,7 @@
           </div>
           <div class="flex flex-wrap w-1/2 pl-2 h-fit">
             <div
-              class="relative w-1/4"
+              class="relative w-1/3 sm:w-1/4"
               *ngFor="let pokemon of matchupData.overview[1].team"
             >
               <sprite [pokemon]="pokemon"></sprite>
@@ -128,7 +128,7 @@
               />
               <div class="absolute flex justify-center w-full -bottom-1">
                 <div
-                  class="w-1/2 text-xs text-center border rounded-full bg-slate-100 border-slate-200"
+                  class="w-1/2 text-center border rounded-full text-2xs sm:text-xs bg-slate-100 border-slate-200"
                 >
                   {{ pokemon.baseStats.spe }}
                 </div>
