--- a/src/app/loading/loading.component.html
+++ b/src/app/loading/loading.component.html
@@ -1,3 +1,3 @@
-<div class="w-full h-full flex flex-col items-center justify-center">
+<div class="flex flex-col items-center justify-center w-full h-full">
   <img class="max-w-96 max-h-96" src="../../assets/icons/loading.svg" />
 </div>
