--- a/src/app/matchup-overview/matchup-overview.component.html
+++ b/src/app/matchup-overview/matchup-overview.component.html
@@ -1,4 +1,4 @@
-<div class="bg-gradient-to-r from-cyan-100 via-slate-100 to-red-100">
+<div class="min-h-full bg-gradient-to-r from-cyan-100 via-slate-100 to-red-100">
   <div class="flex px-2 pt-2">
     <div class="w-fit">
       <button
