--- a/src/app/matchup-overview/matchup-overview.component.html
+++ b/src/app/matchup-overview/matchup-overview.component.html
@@ -95,7 +95,7 @@
           </div>
         </div>
         <div class="flex divide-x-2">
-          <div class="flex flex-row-reverse flex-wrap w-1/2 pr-2 h-fit">
+          <div class="flex flex-row flex-wrap justify-end w-1/2 pr-2 h-fit">
             <div
               class="relative w-1/3 sm:w-1/4"
               *ngFor="let pokemon of matchupData.overview[0].team"
