--- a/src/app/planner/summary/summary.component.html
+++ b/src/app/planner/summary/summary.component.html
@@ -88,7 +88,8 @@
         <div class="flex justify-center space-x-2 h-1/2">
           <img
             *ngFor="let type of pokemon.types"
-            src="https://play.pokemonshowdown.com/sprites/types/{{ type }}.png"
+            src="../../../assets/icons/types/{{ type }}.png"
+            onerror="this.src='../../../assets/icons/types/Unknown.png'"
             alt="{{ type }}"
           />
         </div>
