--- a/src/app/draft-overview/draft-preview/draft-preview.component.html
+++ b/src/app/draft-overview/draft-preview/draft-preview.component.html
@@ -38,25 +38,33 @@
       </div>
       <div class="flex" *ngIf="team.menu == 'main'">
         <a
-          class="w-1/6 m-2 text-center shadow bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
-          [routerLink]="team.leagueId + '/stats'"
-          >Stats</a
-        >
-        <a
-          class="w-1/2 m-2 text-center shadow bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
+          class="w-2/3 m-2 font-semibold text-center shadow bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
           [routerLink]="'/draft/' + team.leagueId"
           >Matches</a
         >
-        <a
-          class="w-1/6 m-2 text-center shadow cursor-pointer bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
-          (click)="team.menu = 'edit'"
-          >Edit
-        </a>
-        <a
-          class="w-1/6 m-2 text-center shadow cursor-pointer bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
-          (click)="team.menu = 'archive'"
-          >Archive
-        </a>
+        <div class="grid items-center justify-center w-1/3 grid-cols-3 px-2">
+          <img
+            class="w-8 h-8 p-1 shadow rounded-xl hover:cursor-pointer hover:shadow bg-cyan-300 shadow-cyan-600"
+            [routerLink]="team.leagueId + '/stats'"
+            title="Stats"
+            src="../../../assets/icons/barchart.svg"
+            alt="Stats"
+          />
+          <img
+            class="w-8 h-8 p-1 shadow rounded-xl hover:cursor-pointer hover:shadow bg-cyan-300 shadow-cyan-600"
+            (click)="team.menu = 'edit'"
+            title="Edit"
+            src="../../../assets/icons/edit.svg"
+            alt="Edit"
+          />
+          <img
+            class="w-8 h-8 p-1 shadow rounded-xl hover:cursor-pointer hover:shadow bg-cyan-300 shadow-cyan-600"
+            src="../../../assets/icons/archive.svg"
+            title="Archive"
+            (click)="team.menu = 'archive'"
+            alt="Archive"
+          />
+        </div>
       </div>
       <div class="flex" *ngIf="team.menu == 'archive'">
         <div
