--- a/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
+++ b/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
@@ -21,7 +21,7 @@
       <button
         class="p-2 m-3 bg-red-300 rounded-lg shadow-md hover:shadow shadow-red-600"
       >
-        <a [routerLink]="'new'"> Add Team </a>
+        <a [routerLink]="'new'"> Add Match </a>
       </button>
       <loading *ngIf="!matchups"></loading>
       <div
@@ -56,30 +56,40 @@
                 ></sprite>
               </div>
             </div>
-            <div class="flex" *ngIf="!matchup.deleteConfirm">
+            <div class="flex h-fit" *ngIf="!matchup.deleteConfirm">
               <a
-                class="w-1/6 m-2 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl"
-                [routerLink]="'score'"
-                [queryParams]="{ matchup: matchup._id | json }"
-                >Score</a
-              >
-              <a
-                class="w-1/2 m-2 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl"
+                class="w-2/3 m-2 font-semibold text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl"
                 [routerLink]="'matchup/'"
                 [queryParams]="{ id: matchup._id }"
-                >Prep</a
+                >View Matchup</a
               >
-              <a
-                class="w-1/6 m-2 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl"
-                [routerLink]="'edit'"
-                [queryParams]="{ matchup: matchup._id | json }"
-                >Edit
-              </a>
-              <a
-                class="w-1/6 m-2 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl"
-                (click)="matchup.deleteConfirm = true"
-                >Delete
-              </a>
+              <div
+                class="grid items-center justify-center w-1/3 grid-cols-3 px-2"
+              >
+                <img
+                  class="w-8 h-8 p-1 bg-red-300 shadow hover:shadow rounded-xl hover:cursor-pointer shadow-red-600"
+                  [routerLink]="'score'"
+                  [queryParams]="{ matchup: matchup._id | json }"
+                  title="Score"
+                  src="../../../assets/icons/score.svg"
+                  alt="Score"
+                />
+                <img
+                  class="w-8 h-8 p-1 bg-red-300 shadow hover:shadow rounded-xl hover:cursor-pointer shadow-red-600"
+                  [routerLink]="'edit'"
+                  [queryParams]="{ matchup: matchup._id | json }"
+                  src="../../../assets/icons/edit.svg"
+                  title="Edit"
+                  alt="Edit"
+                />
+                <img
+                  class="w-8 h-8 p-1 bg-red-300 shadow hover:shadow rounded-xl hover:cursor-pointer shadow-red-600"
+                  src="../../../assets/icons/trash.svg"
+                  (click)="matchup.deleteConfirm = true"
+                  title="Delete"
+                  alt="Delete"
+                />
+              </div>
             </div>
             <div class="flex" *ngIf="matchup.deleteConfirm">
               <div
