full height lodaing for shared

--- a/src/app/matchup-overview/matchup-shared.component.html
+++ b/src/app/matchup-overview/matchup-shared.component.html
@@ -1,4 +1,4 @@
-<div class="bg-gradient-to-r from-cyan-100 via-slate-100 to-red-100">
+<div class="min-h-full bg-gradient-to-r from-cyan-100 via-slate-100 to-red-100">
   <div class="flex justify-center w-full pt-2">
     <div *ngIf="matchupData" class="flex flex-wrap justify-between gap-x-8">
       <div class="w-full text-center sm:w-auto">
