--- a/src/app/matchup-overview/matchup-overview.component.html
+++ b/src/app/matchup-overview/matchup-overview.component.html
@@ -55,7 +55,7 @@
         <h2 class="text-3xl font-bold text-center">Share your matchup</h2>
         <div class="flex items-center max-w-full mt-4">
           <div
-            class="flex w-full p-1 overflow-x-auto border rounded-xl border-slate-200"
+            class="flex items-center w-full p-1 overflow-x-auto border rounded-xl border-slate-200"
           >
             <div class="w-auto overflow-x-auto">
               {{ shareUrl }}
