--- a/src/app/matchup-overview/matchup/movechart/movechart.component.html
+++ b/src/app/matchup-overview/matchup/movechart/movechart.component.html
@@ -11,9 +11,7 @@
       </button>
     </div>
   </div>
-  <div
-    class="w-full h-full overflow-y-auto border-4 border-slate-400 bg-slate-400"
-  >
+  <div class="w-full overflow-y-auto border-4 border-slate-400 bg-slate-400">
     <move-category
       *ngFor="let category of this.teams[selectedTeam]"
       [category]="category"
