summary table layout expands

--- a/src/app/planner/planner.component.html
+++ b/src/app/planner/planner.component.html
@@ -105,7 +105,7 @@
       </div>
       <div class="w-full bg-yellow-200 h-[90%]">
         <summary
-          class="list-none"
+          class="h-full list-none"
           *ngIf="tabSelected == 0 && summary"
           [summary]="summary"
         ></summary>
@@ -124,6 +124,6 @@
     </div>
   </div>
 </form>
-{{ plannerForm.value | json }} {{ tabSelected | json }}
+<!-- {{ plannerForm.value | json }} {{ tabSelected | json }} -->
 <!-- Typechart include multi Type Pokemon Settings Settings List Pokemon Move chart
 Recommended Pokemon Pokemon summary -->
