--- a/src/app/planner/summary/summary.component.html
+++ b/src/app/planner/summary/summary.component.html
@@ -1,207 +1,250 @@
-<div class="w-fit">
-  <table
-    id="myOverview"
-    class="w-full border-4 rounded-md table-auto border-slate-400 bg-cyan-400"
-  >
-    <tr class="bg-slate-400">
-      <th></th>
-      <th class="w-12"></th>
-      <th
-        (click)="sortByName()"
-        class="w-32 cursor-pointer hover:text-slate-200"
-      >
-        <div *ngIf="sortBy != 'name'">Name</div>
-        <div *ngIf="sortBy == 'name' && !reversed">Name ↥</div>
-        <div *ngIf="sortBy == 'name' && reversed">Name ↧</div>
-      </th>
-      <th class="w-24">Abilities</th>
+<div class="flex flex-col h-full border-4 w-fit border-slate-400 bg-cyan-400">
+  <table class="table-fixed h-fit">
+    <thead class="bg-slate-400">
+      <tr>
+        <th
+          (click)="sortByName()"
+          class="w-32 cursor-pointer hover:text-slate-200"
+        >
+          <div *ngIf="sortBy != 'name'">Name</div>
+          <div *ngIf="sortBy == 'name' && !reversed">Name ↥</div>
+          <div *ngIf="sortBy == 'name' && reversed">Name ↧</div>
+        </th>
+        <th class="w-12">Types</th>
+        <th class="w-24">Abilities</th>
 
-      <th
-        (click)="sortByStat('hp')"
-        class="w-12 cursor-pointer hover:text-slate-200"
-      >
-        <div *ngIf="sortBy != 'hp'">HP</div>
-        <div *ngIf="sortBy == 'hp' && !reversed">HP ↥</div>
-        <div *ngIf="sortBy == 'hp' && reversed">HP ↧</div>
-      </th>
-      <th
-        (click)="sortByStat('atk')"
-        class="w-12 cursor-pointer hover:text-slate-200"
-      >
-        <div *ngIf="sortBy != 'atk'">ATK</div>
-        <div *ngIf="sortBy == 'atk' && !reversed">ATK ↥</div>
-        <div *ngIf="sortBy == 'atk' && reversed">ATK ↧</div>
-      </th>
-      <th
-        (click)="sortByStat('def')"
-        class="w-12 cursor-pointer hover:text-slate-200"
-      >
-        <div *ngIf="sortBy != 'def'">DEF</div>
-        <div *ngIf="sortBy == 'def' && !reversed">DEF ↥</div>
-        <div *ngIf="sortBy == 'def' && reversed">DEF ↧</div>
-      </th>
-      <th
-        (click)="sortByStat('spa')"
-        class="w-12 cursor-pointer hover:text-slate-200"
-      >
-        <div *ngIf="sortBy != 'spa'">SPA</div>
-        <div *ngIf="sortBy == 'spa' && !reversed">SPA ↥</div>
-        <div *ngIf="sortBy == 'spa' && reversed">SPA ↧</div>
-      </th>
-      <th
-        (click)="sortByStat('spd')"
-        class="w-12 cursor-pointer hover:text-slate-200"
-      >
-        <div *ngIf="sortBy != 'spd'">SPD</div>
-        <div *ngIf="sortBy == 'spd' && !reversed">SPD ↥</div>
-        <div *ngIf="sortBy == 'spd' && reversed">SPD ↧</div>
-      </th>
-      <th
-        (click)="sortByStat('spe')"
-        class="w-12 cursor-pointer hover:text-slate-200"
-      >
-        <div *ngIf="sortBy != 'spe'">SPE</div>
-        <div *ngIf="sortBy == 'spe' && !reversed">SPE ↥</div>
-        <div *ngIf="sortBy == 'spe' && reversed">SPE ↧</div>
-      </th>
-    </tr>
-    <tr
-      *ngFor="let pokemon of summary.team"
-      class="h-12 border-b border-slate-400"
-    >
-      <td>
-        <div *ngIf="pokemon.capt" class="w-6">
-          <div *ngIf="pokemon.capt.tera">
-            <tera [pokemon]="pokemon"></tera>
+        <th
+          (click)="sortByStat('hp')"
+          class="w-12 cursor-pointer hover:text-slate-200"
+        >
+          <div *ngIf="sortBy != 'hp'">HP</div>
+          <div *ngIf="sortBy == 'hp' && !reversed">HP ↥</div>
+          <div *ngIf="sortBy == 'hp' && reversed">HP ↧</div>
+        </th>
+        <th
+          (click)="sortByStat('atk')"
+          class="w-12 cursor-pointer hover:text-slate-200"
+        >
+          <div *ngIf="sortBy != 'atk'">ATK</div>
+          <div *ngIf="sortBy == 'atk' && !reversed">ATK ↥</div>
+          <div *ngIf="sortBy == 'atk' && reversed">ATK ↧</div>
+        </th>
+        <th
+          (click)="sortByStat('def')"
+          class="w-12 cursor-pointer hover:text-slate-200"
+        >
+          <div *ngIf="sortBy != 'def'">DEF</div>
+          <div *ngIf="sortBy == 'def' && !reversed">DEF ↥</div>
+          <div *ngIf="sortBy == 'def' && reversed">DEF ↧</div>
+        </th>
+        <th
+          (click)="sortByStat('spa')"
+          class="w-12 cursor-pointer hover:text-slate-200"
+        >
+          <div *ngIf="sortBy != 'spa'">SPA</div>
+          <div *ngIf="sortBy == 'spa' && !reversed">SPA ↥</div>
+          <div *ngIf="sortBy == 'spa' && reversed">SPA ↧</div>
+        </th>
+        <th
+          (click)="sortByStat('spd')"
+          class="w-12 cursor-pointer hover:text-slate-200"
+        >
+          <div *ngIf="sortBy != 'spd'">SPD</div>
+          <div *ngIf="sortBy == 'spd' && !reversed">SPD ↥</div>
+          <div *ngIf="sortBy == 'spd' && reversed">SPD ↧</div>
+        </th>
+        <th
+          (click)="sortByStat('spe')"
+          class="w-12 cursor-pointer hover:text-slate-200"
+        >
+          <div *ngIf="sortBy != 'spe'">SPE</div>
+          <div *ngIf="sortBy == 'spe' && !reversed">SPE ↥</div>
+          <div *ngIf="sortBy == 'spe' && reversed">SPE ↧</div>
+        </th>
+      </tr>
+    </thead>
+  </table>
+  <div class="flex-grow overflow-y-auto scrollbar-hidden">
+    <table class="table-fixed">
+      <tbody>
+        <tr
+          *ngFor="let pokemon of summary.team"
+          class="h-12 border-b border-slate-400"
+        >
+          <!-- <td>
+          <div *ngIf="pokemon.capt" class="w-6">
+            <div *ngIf="pokemon.capt.tera">
+              <tera [pokemon]="pokemon"></tera>
+            </div>
+            <div *ngIf="pokemon.capt.z">
+              <img src="../../../assets/icons/z.svg" />
+            </div>
           </div>
-          <div *ngIf="pokemon.capt.z">
-            <img src="../../../assets/icons/z.svg" />
-          </div>
-        </div>
-      </td>
-      <td>
-        <sprite [pokemon]="pokemon"></sprite>
-      </td>
-      <td class="flex flex-col h-full text-sm">
-        <div class="h-1/2">{{ pokemon.name }}</div>
-
-        <div class="flex justify-center space-x-2 h-1/2">
-          <img
-            *ngFor="let type of pokemon.types"
-            src="../../../assets/icons/types/{{ type }}.png"
-            onerror="this.src='../../../assets/icons/types/Unknown.png'"
-            alt="{{ type }}"
+        </td> -->
+          <td class="flex items-center w-32 h-full text-sm">
+            <sprite [pokemon]="pokemon" class="w-12 h-12 mx-2"></sprite>
+            <div class="flex items-center">
+              {{ pokemon.name }}
+            </div>
+          </td>
+          <td class="w-12">
+            <div class="flex flex-col items-center w-full">
+              <img
+                *ngFor="let type of pokemon.types"
+                class="max-w-8"
+                src="../../../assets/icons/types/{{ type }}.png"
+                onerror="this.src='../../../assets/icons/types/Unknown.png'"
+                alt="{{ type }}"
+              />
+            </div>
+          </td>
+          <td class="w-24">
+            <div
+              *ngFor="let ability of pokemon.abilities"
+              class="text-xs text-center"
+            >
+              {{ ability }}
+            </div>
+          </td>
+          <td
+            class="w-12 text-center border-l-2 border-slate-400"
+            [ngClass]="statColor(pokemon.baseStats.hp)"
+          >
+            {{ pokemon.baseStats.hp }}
+          </td>
+          <td
+            class="w-12 text-center"
+            [ngClass]="statColor(pokemon.baseStats.atk)"
+          >
+            {{ pokemon.baseStats.atk }}
+          </td>
+          <td
+            class="w-12 text-center"
+            [ngClass]="statColor(pokemon.baseStats.def)"
+          >
+            {{ pokemon.baseStats.def }}
+          </td>
+          <td
+            class="w-12 text-center"
+            [ngClass]="statColor(pokemon.baseStats.spa)"
+          >
+            {{ pokemon.baseStats.spa }}
+          </td>
+          <td
+            class="w-12 text-center"
+            [ngClass]="statColor(pokemon.baseStats.spd)"
+          >
+            {{ pokemon.baseStats.spd }}
+          </td>
+          <td
+            class="w-12 text-center"
+            [ngClass]="statColor(pokemon.baseStats.spe)"
+          >
+            {{ pokemon.baseStats.spe }}
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <table class="table-fixed h-fit">
+    <tfoot class="sticky bottom-0">
+      <tr class="border-t-2 bg-slate-300 border-slate-400">
+        <td class="w-32"></td>
+        <td class="w-12"></td>
+        <td class="w-24 text-center">Average</td>
+        <td
+          class="w-12 text-center"
+          [ngClass]="statColor(summary.stats.mean.hp)"
+        >
+          {{ summary.stats.mean.hp }}
+        </td>
+        <td
+          class="w-12 text-center"
+          [ngClass]="statColor(summary.stats.mean.atk)"
+        >
+          {{ summary.stats.mean.atk }}
+        </td>
+        <td
+          class="w-12 text-center"
+          [ngClass]="statColor(summary.stats.mean.def)"
+        >
+          {{ summary.stats.mean.def }}
+        </td>
+        <td
+          class="w-12 text-center"
+          [ngClass]="statColor(summary.stats.mean.spa)"
+        >
+          {{ summary.stats.mean.spa }}
+        </td>
+        <td
+          class="w-12 text-center"
+          [ngClass]="statColor(summary.stats.mean.spd)"
+        >
+          {{ summary.stats.mean.spd }}
+        </td>
+        <td
+          class="w-12 text-center"
+          [ngClass]="statColor(summary.stats.mean.spe)"
+        >
+          {{ summary.stats.mean.spe }}
+        </td>
+      </tr>
+      <tr class="bg-slate-300">
+        <td class="flex w-32">
+          <input type="range" min="20" max="140" [(ngModel)]="baseValue" />
+          <input
+            type="number"
+            [(ngModel)]="baseValue"
+            min="20"
+            max="140"
+            value="{{ baseValue }}"
+            class="w-8 bg-transparent"
           />
-        </div>
-      </td>
-      <td>
-        <div *ngFor="let ability of pokemon.abilities" class="text-center">
-          {{ ability }}
-        </div>
-      </td>
-      <td
-        class="text-center border-l-2 border-slate-400"
-        [ngClass]="statColor(pokemon.baseStats.hp)"
-      >
-        {{ pokemon.baseStats.hp }}
-      </td>
-      <td class="text-center" [ngClass]="statColor(pokemon.baseStats.atk)">
-        {{ pokemon.baseStats.atk }}
-      </td>
-      <td class="text-center" [ngClass]="statColor(pokemon.baseStats.def)">
-        {{ pokemon.baseStats.def }}
-      </td>
-      <td class="text-center" [ngClass]="statColor(pokemon.baseStats.spa)">
-        {{ pokemon.baseStats.spa }}
-      </td>
-      <td class="text-center" [ngClass]="statColor(pokemon.baseStats.spd)">
-        {{ pokemon.baseStats.spd }}
-      </td>
-      <td class="text-center" [ngClass]="statColor(pokemon.baseStats.spe)">
-        {{ pokemon.baseStats.spe }}
-      </td>
-    </tr>
-    <tr class="border-t-2 bg-slate-300 border-slate-400">
-      <td></td>
-      <td></td>
-      <td></td>
-      <td class="text-center">Average</td>
-      <td class="text-center" [ngClass]="statColor(summary.stats.mean.hp)">
-        {{ summary.stats.mean.hp }}
-      </td>
-      <td class="text-center" [ngClass]="statColor(summary.stats.mean.atk)">
-        {{ summary.stats.mean.atk }}
-      </td>
-      <td class="text-center" [ngClass]="statColor(summary.stats.mean.def)">
-        {{ summary.stats.mean.def }}
-      </td>
-      <td class="text-center" [ngClass]="statColor(summary.stats.mean.spa)">
-        {{ summary.stats.mean.spa }}
-      </td>
-      <td class="text-center" [ngClass]="statColor(summary.stats.mean.spd)">
-        {{ summary.stats.mean.spd }}
-      </td>
-      <td class="text-center" [ngClass]="statColor(summary.stats.mean.spe)">
-        {{ summary.stats.mean.spe }}
-      </td>
-    </tr>
-    <tr class="bg-slate-300">
-      <td></td>
-      <td></td>
-      <td class="flex">
-        <input type="range" min="20" max="140" [(ngModel)]="baseValue" />
-        <input
-          type="number"
-          [(ngModel)]="baseValue"
-          min="20"
-          max="140"
-          value="{{ baseValue }}"
-          class="w-8 bg-transparent"
-        />
-      </td>
-      <td class="text-center">Median</td>
-      <td class="text-center" [ngClass]="statColor(summary.stats.median.hp)">
-        {{ summary.stats.median.hp }}
-      </td>
-      <td class="text-center" [ngClass]="statColor(summary.stats.median.atk)">
-        {{ summary.stats.median.atk }}
-      </td>
-      <td class="text-center" [ngClass]="statColor(summary.stats.median.def)">
-        {{ summary.stats.median.def }}
-      </td>
-      <td class="text-center" [ngClass]="statColor(summary.stats.median.spa)">
-        {{ summary.stats.median.spa }}
-      </td>
-      <td class="text-center" [ngClass]="statColor(summary.stats.median.spd)">
-        {{ summary.stats.median.spd }}
-      </td>
-      <td class="text-center" [ngClass]="statColor(summary.stats.median.spe)">
-        {{ summary.stats.median.spe }}
-      </td>
-    </tr>
-    <tr class="bg-slate-300">
-      <td></td>
-      <td></td>
-      <td></td>
-      <td class="text-center">Max</td>
-      <td class="text-center" [ngClass]="statColor(summary.stats.max.hp)">
-        {{ summary.stats.max.hp }}
-      </td>
-      <td class="text-center" [ngClass]="statColor(summary.stats.max.atk)">
-        {{ summary.stats.max.atk }}
-      </td>
-      <td class="text-center" [ngClass]="statColor(summary.stats.max.def)">
-        {{ summary.stats.max.def }}
-      </td>
-      <td class="text-center" [ngClass]="statColor(summary.stats.max.spa)">
-        {{ summary.stats.max.spa }}
-      </td>
-      <td class="text-center" [ngClass]="statColor(summary.stats.max.spd)">
-        {{ summary.stats.max.spd }}
-      </td>
-      <td class="text-center" [ngClass]="statColor(summary.stats.max.spe)">
-        {{ summary.stats.max.spe }}
-      </td>
-    </tr>
+        </td>
+        <td></td>
+        <td class="text-center">Median</td>
+        <td class="text-center" [ngClass]="statColor(summary.stats.median.hp)">
+          {{ summary.stats.median.hp }}
+        </td>
+        <td class="text-center" [ngClass]="statColor(summary.stats.median.atk)">
+          {{ summary.stats.median.atk }}
+        </td>
+        <td class="text-center" [ngClass]="statColor(summary.stats.median.def)">
+          {{ summary.stats.median.def }}
+        </td>
+        <td class="text-center" [ngClass]="statColor(summary.stats.median.spa)">
+          {{ summary.stats.median.spa }}
+        </td>
+        <td class="text-center" [ngClass]="statColor(summary.stats.median.spd)">
+          {{ summary.stats.median.spd }}
+        </td>
+        <td class="text-center" [ngClass]="statColor(summary.stats.median.spe)">
+          {{ summary.stats.median.spe }}
+        </td>
+      </tr>
+      <tr class="bg-slate-300">
+        <td></td>
+        <td></td>
+        <td class="text-center">Max</td>
+        <td class="text-center" [ngClass]="statColor(summary.stats.max.hp)">
+          {{ summary.stats.max.hp }}
+        </td>
+        <td class="text-center" [ngClass]="statColor(summary.stats.max.atk)">
+          {{ summary.stats.max.atk }}
+        </td>
+        <td class="text-center" [ngClass]="statColor(summary.stats.max.def)">
+          {{ summary.stats.max.def }}
+        </td>
+        <td class="text-center" [ngClass]="statColor(summary.stats.max.spa)">
+          {{ summary.stats.max.spa }}
+        </td>
+        <td class="text-center" [ngClass]="statColor(summary.stats.max.spd)">
+          {{ summary.stats.max.spd }}
+        </td>
+        <td class="text-center" [ngClass]="statColor(summary.stats.max.spe)">
+          {{ summary.stats.max.spe }}
+        </td>
+      </tr>
+    </tfoot>
   </table>
 </div>
